--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
-<h1>
-  Stanley Wu
-</h1>
+  <head>
+    <meta charset="utf-8">
+    <meta rel="stylesheet" href="style.css">
+    <title> Stanley Wu </title>
+  </head>
+  <body>
+  </body>
 </html>
