--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta rel="stylesheet" href="style.css">
-    <title> Stanley Wu </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title> Welcome to Stan Wu's Personal Website! </title>
   </head>
   <body>
+    <div class="grid">
+      <div class="title"> HI, I'M STAN WU! </div>
+      <div class="header"></div>
+      <div class="sidebar"> 
+      </div>
+      <div class="content">  </div>
+      <div class="footer"> </div>
+    </div>
   </body>
-</html>
+</html>   
