--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <title> Welcome to Stan Wu's Personal Website! </title>
   </head>
   <body>
-    <div class="grid">
-      <div class="title"> HI, I'M STAN WU! </div>
-      <div class="header"></div>
-      <div class="sidebar"> 
+    <div class="body_bg_img">
+      <div class="grid">
+        <div class="title"> HI, I'M STAN WU! </div>
+        <div class="header"> 
+        </div>
+        <div class="sidebar">
+        </div>
+        <div class="content">  </div>
+        <div class="footer"> shaochong.wu@gmail.com &copy;2018 Shaochong Wu </div>
       </div>
-      <div class="content">  </div>
-      <div class="footer"> </div>
     </div>
   </body>
 </html>   
